--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Hello World Mabuhay Naiza</h1>
+    <ol>
+        <li>Hugh</li>
+        <li>Owen</li>
+        <li>Panopio</li>
+    </ol>
 </body>
 </html>
